--- a/c#brage/readme.brage.english.html
+++ b/c#brage/readme.brage.english.html
@@ -156,6 +156,8 @@ Note: For the case that the merchant Borda was not killed upon the first meeting
 <strong>Acifer:</strong> Portrait and promotion picture, ideas, D&D knowledge. Thank you for the beautiful pictures, working on this mod was a lot of (even more) fun because of those!</br>
 <strong>Lumorus:</strong> ideas. Thank you for the idea of making Brage an NPC and pointing out that he is from Amn (which makes meeting him in BGII so much more natural.) Without it I would not have started working on this mod!</br> 
 </br>
+Italian Translation by <strong>Coland</strong>.</br>
+</br>
 Thanks to BioWare, Black Isle and Wizards of the Coast for Baldur's Gate 1, 2 and the Infinity Engine, and BeamDog for the revival of the games.</br>
 Thanks to Kerzenburgforum for hosting the mod and giving a place for exchange of ideas.</br>
 Thanks to all modders who developed and are maintaining the IE modding tools, without which this mod would not have been possible.</br>
@@ -171,6 +173,7 @@ This mod is also not developed, supported, or endorsed by BioWare, Black Isle St
 <h1><a name="version" id="version">Version History</a></h1>
 <div class="section">
 Version 5:</br>
+- Italian version by Coland.<br />
 - Revised kickout dialogue.<br />
 - Patching of "Brage's Sword" quest from bgqe on EET should work always.</br>
 - Added basic SoD content.</br>
