--- a/c#brage/readme.brage.german.html
+++ b/c#brage/readme.brage.german.html
@@ -156,6 +156,8 @@ Hinweis: Falls man Borda bei der Originalbegegnung beim Xvartdorf nicht get&ouml
 <strong>Acifer:</strong> Portrait, Promotion-Bild, Ideen, D&D-Wissen. Danke f&uuml;r die tollen Bilder, durch sie hat das Arbeiten an dieser Mod noch mehr Spa&szlig; gemacht!</br>
 <strong>Lumorus:</strong> Danke f&uuml;r die Idee, aus Brage einen NSC zu machen und den Hinweis, dass er ja aus Amn kommt und man ihn daher ohne Verrenkungen in BGII in Atkatla wiedertreffen kann. Ohne h&auml;tte ich an dieser Mod nicht gearbeitet!</br> 
 </br>
+Italienische Übersetzung von <strong>Coland</strong>.</br>
+</br>
 Danke an BioWare, Black Isle und Wizards of the Coast f&uuml;r Baldur's Gate 1, 2 und die Infinity Engine, und BeamDog f&uuml;r das Neuauflegen der Spiele.</br>
 Danke ans Kerzenburgforum f&uuml;r das Hosten der Mod und das Bereitstellen von Austauschm&ouml;glichkeiten mit anderen Moddern und Spielern.</br>
 Danke an alle Modder die f&uuml;r die IE-Engine Modding Tools entwickelt haben oder gerade pflegen. Ohne w&auml;re diese Modifikation nicht m&ouml;glich gewesen.</br>
@@ -171,6 +173,7 @@ This mod is also not developed, supported, or endorsed by BioWare, Black Isle St
 <h1><a name="version" id="version">Versionshistorie</a></h1>
 <div class="section">
 Version 5:</br>
+- Italian version by Coland.<br />
 - Revised kickout dialogue.<br />
 - Patching of "Brage's Sword" quest from bgqe on EET should work always.</br>
 - Added basic SoD content.</br>
