typo corrections, finished translations

--- a/c#brage/readme.brage.english.html
+++ b/c#brage/readme.brage.english.html
@@ -22,8 +22,8 @@
   <p><strong><a href="https://www.baldurs-gate.de/index.php">A Kerzenburgforum Modification</a><br />  </strong>
     Author: jastey<br />
 	Portrait Artist: Acifer<br />
-    <strong> Languages:</strong> German, English<br />
-    <strong>Platform: </strong>Windows</p> 
+    <strong> Languages:</strong> German, English, Italian<br />
+    <strong>Platform: </strong>Windows, OSX, Linux</p> 
   <p>Brage's Redemption is a Quest Mod for BG1 and an NPC Mod for the whole Baldur's Gate Epic. It is natively compatible with BG:EE, SoD, BGII, BGT, BGII:EE, EET. No Tutu.</p>
     <img src="readme/bragepromo.png"><br /><br />
 </div>
@@ -84,13 +84,13 @@ Run WeInstall c#brage in your game folder to install the mod. Then run wine BGMa
 
 <h1><a name="compat" id="compat">Compatibility with other mods</a></h1>
 <div class="section">
-Brage's Redemption was implemented with WeiDU with highest priority to compatibility with other mods. However, the BG1 quest should be installed before the BG1NPC Project so no added reply options will be overwritten. For this, either install the mod before BG1NPC Project (for BG:EE and BGT). For EET, you also have the possibility to install the beginnings quest via the <a href="https://www.baldurs-gate.de/index.php?resources/jasteys-baldurs-gate-mini-quests-and-begegnungen-modifikation.17/">Baldur's Gate Mini Quests and Encounters Mod (bgqe, component "Brage's Sword")</a> before BG1NPC Project to your BG:EE install before the transition to EET. If the quest was installed via bgqe, it will be detected accordingly when installing Brage's Redemption Mod.<br />
+Brage's Redemption was implemented with WeiDU with highest priority to compatibility with other mods. However, the BG1 quest should be installed before the BG1NPC Project so no added reply options will be overwritten. For this, either install the mod before BG1NPC Project. You also have the possibility to install the beginnings quest via the <a href="https://www.baldurs-gate.de/index.php?resources/jasteys-baldurs-gate-mini-quests-and-begegnungen-modifikation.17/">Baldur's Gate Mini Quests and Encounters Mod (bgqe, component "Brage's Sword")</a> If the quest was installed via bgqe, it will be detected accordingly when installing Brage's Redemption Mod.<br />
 </div>
 
 <h1><a name="content" id="content">Description</a></h1>
 <div class="section">
 <h2> <a name="generalcontent" id="generalcontent">General Info</a></h2>
-The mod introduces a quest extention to the Brage quest in the game (BG1). Brage is the captain of the Nashkel guard and went missing after killing his family. The quest extention to prove his innocence was originally published as the component "Brage's Sword" in the mod <a href="https://www.baldurs-gate.de/index.php?resources/jasteys-baldurs-gate-mini-quests-and-begegnungen-modifikation.17/">bgqe</a>.<br /> 
+The mod introduces a quest extention to the Brage quest in the game (BG1). Brage is the captain of the Nashkel guard and went missing after killing his family. The quest extention to prove his innocence is also published as the component "Brage's Sword" in the mod <a href="https://www.baldurs-gate.de/index.php?resources/jasteys-baldurs-gate-mini-quests-and-begegnungen-modifikation.17/">bgqe</a>. Brage's Redemption inserts this quest in case bgqe is not installed as well, and will expand the quest "Brage's Sword" to make it more convenient (addd journal entries etc.)<br /> 
 To gain Brage as a joinable NPC, the PC needs to prove his innocence as well as give him back his real sword. After leaving the temple once after that, Brage can be visited inside the temple of Helm in Nashkel and will offer to join the PC.<br />
 The quest to make Brage a joinable NPC can be completed before clearing the Nashkel mines. See the spoiler section for information.<br />
 <br />
@@ -105,7 +105,7 @@ The BG1 part contains a friendship path with 11 dialogues, dealing with Brage's 
 To experience all banters with Eldoth and Viconia, most cursed items should be identified and placed in the group's inventory.<br />
 After 2/3 of the friendship path, Brage will tell that he wants to visit his family's grave in Nashkel. The PC does not have to be with him while it happens, but more content will be witnessed if they do (otherwise, Brage will talk about it upon rejoining).<br /><br />
 <strong>SoD:</strong><br /><br />
-As of version Beta 1, there is no SoD content yet. Brage will remain in the group and can be taken along until he is kicked out. <br /><br />
+As of version 5, there is basic SoD content: Brage will comment on the main events like all NPCs do and can be kicked out and taken back into the group as common during the SoD campaign. <br /><br />
 <strong>BGII:</strong><br /><br />
 As of version Beta 1, there is no official BGII content yet. There exists some BGII content which is not translated to German:<br />
 Brage will be inside the temple of Helm in the Temple's District after the PC received the quest for the Unseeing Eye from one of the temples. The quest has to be accepted for Brage to spawn. After that, he can be taken into the group.<br />
@@ -124,7 +124,7 @@ His stats where taken from the original BG1 creature file:
 		<li>WIS: 8</li>
 		<li>CHA: 13</li>
       </ul> <br />
-For the English version, Brage uses the soundset "HoW_Male_2" from IWD:TotLM.<br /><br />
+Brage uses the according language soundsets "HoW_Male_2" from IWD:TotLM, for both the English and the German versions. The English soundset is used for any other language versions that do not have an own one.<br /><br />
 Brage's portrait was generously created and provided by Acifer.<br /><br />
     <img src="readme/brage.png">
 <h2> <a name="spoiler" id="spoiler">Walkthrough / Spoilers</a></h2>	
@@ -156,7 +156,7 @@ Note: For the case that the merchant Borda was not killed upon the first meeting
 <strong>Acifer:</strong> Portrait and promotion picture, ideas, D&D knowledge. Thank you for the beautiful pictures, working on this mod was a lot of (even more) fun because of those!</br>
 <strong>Lumorus:</strong> ideas. Thank you for the idea of making Brage an NPC and pointing out that he is from Amn (which makes meeting him in BGII so much more natural.) Without it I would not have started working on this mod!</br> 
 </br>
-Italian Translation by <strong>Coland</strong>.</br>
+Italian Translation by <strong>Coland</strong>, proofread by <strong>Colmar</strong>. Thank you!</br>
 </br>
 Thanks to BioWare, Black Isle and Wizards of the Coast for Baldur's Gate 1, 2 and the Infinity Engine, and BeamDog for the revival of the games.</br>
 Thanks to Kerzenburgforum for hosting the mod and giving a place for exchange of ideas.</br>
@@ -173,7 +173,7 @@ This mod is also not developed, supported, or endorsed by BioWare, Black Isle St
 <h1><a name="version" id="version">Version History</a></h1>
 <div class="section">
 Version 5:</br>
-- Italian version by Coland.<br />
+- Italian version by Coland, proofread by Colmar.<br />
 - Revised kickout dialogue.<br />
 - Patching of "Brage's Sword" quest from bgqe on EET should work always.</br>
 - Added basic SoD content.</br>
