--- a/c#brage/readme.brage.german.html
+++ b/c#brage/readme.brage.german.html
@@ -22,7 +22,7 @@
   <p><strong><a href="https://www.baldurs-gate.de/index.php">Eine Kerzenburgforum-Modifikation</a><br />  </strong>
     Text und Coding: jastey<br />
 	Portrait: Acifer<br />
-    <strong> Sprachen:</strong> Deutsch, Englisch<br />
+    <strong> Sprachen:</strong> Englisch, Deutsch, Italienisch<br />
     <strong> Betriebssysteme: </strong>Windows, OSX, Linux</p> 
   <p>Brage's Redemption ist eine Questmod f&uuml;r BG1 und eine NSC Mod f&uuml;r das ganze Baldur's Gate Epos. Direkt kompatibel mit BG:EE, SoD, BGII, BGT, BGII:EE, EET. Nicht mit Tutu.</p>
     <img src="readme/bragepromo.png"><br /><br />
@@ -83,13 +83,13 @@ Lasst WeInstall c#brage in Euren Spielordner laufen, um die Modifikation zu inst
 
 <h1><a name="compat" id="compat">Kompatiblit&auml;t mit anderen Mods</a></h1>
 <div class="section">
-Brage's Redemption wurde mit WeiDU und mit dem Anspruch gr&ouml;&szlig;tm&ouml;glicher Kompatibilit&auml;t mit anderen Mods erstellt. Die Mod sollte jedoch vor dem BG1NPC Projekt installiert werden, damit die M&ouml;glichkeit, Brage auch Oublek auszuliefern, nicht &uuml;berschrieben wird. F&uuml;r EET, f&uuml;r das es keine direkt kompatible Version des BG1NPC Projektes gibt, kann dies erreicht werden, indem die Komponente "Brages Schwert" der <a href="https://www.baldurs-gate.de/index.php?resources/jasteys-baldurs-gate-mini-quests-and-begegnungen-modifikation.17/">Baldur's Gate Mini Quests and Encounters Mod (bgqe)</a> vor dem BG1NPC Project in die BG:EE (SoD)-Installation installiert wird. Wird der Quest durch bgqe installiert, wird er von der Mod Brage's Redemption entsprechend erkannt.<br />
+Brage's Redemption wurde mit WeiDU und mit dem Anspruch gr&ouml;&szlig;tm&ouml;glicher Kompatibilit&auml;t mit anderen Mods erstellt. Die Mod sollte jedoch vor dem BG1NPC Projekt installiert werden, damit die M&ouml;glichkeit, Brage auch Oublek auszuliefern, nicht &uuml;berschrieben wird. Dies kann auch erreicht werden, indem die Komponente "Brages Schwert" der <a href="https://www.baldurs-gate.de/index.php?resources/jasteys-baldurs-gate-mini-quests-and-begegnungen-modifikation.17/">Baldur's Gate Mini Quests and Encounters Mod (bgqe)</a> vor dem BG1NPC Project installiert wird. Wird der Quest durch bgqe installiert, wird er von der Mod Brage's Redemption entsprechend erkannt.<br />
 </div>
 
 <h1><a name="content" id="content">Modinhalte</a></h1>
 <div class="section">
 <h2> <a name="generalcontent" id="generalcontent">Generelles</a></h2>
-Die Mod f&uuml;gt zun&auml;chst eine Questerweiterung zur originalen Brage-Quest in BG1 ein. Brage ist der Hauptmann der Garde in Nashkell, der verschwunden ist, nachdem er seine Familie get&ouml;tet hat. Die Questerweiterung, durch die seine Unschuld bewiesen werden kann, war urspr&uuml;nglich eine eigenst&auml;ndige Komponente in der Mod <a href="https://www.baldurs-gate.de/index.php?resources/jasteys-baldurs-gate-mini-quests-and-begegnungen-modifikation.17/">bgqe</a> mit dem Namen "Brages Schwert".<br /> 
+Die Mod f&uuml;gt zun&auml;chst eine Questerweiterung zur originalen Brage-Quest in BG1 ein. Brage ist der Hauptmann der Garde in Nashkell, der verschwunden ist, nachdem er seine Familie get&ouml;tet hat. Die Questerweiterung, durch die seine Unschuld bewiesen werden kann, ist auch als eine eigenst&auml;ndige Komponente in der Mod <a href="https://www.baldurs-gate.de/index.php?resources/jasteys-baldurs-gate-mini-quests-and-begegnungen-modifikation.17/">bgqe</a> mit dem Namen "Brages Schwert" enthalten. "Brage's Redemption f&uuml;gt denselben Quest ein, wenn er nicht bereits &uuml;ber bgqe installiert ist, und erweitert ihn etwas (um z.B. weitere Tagebcheintr&auml;ge etc.)<br /> 
 Damit Brage in BG1 als NSC in die Gruppe aufgenommen werden kann, muss zuerst seine Unschuld bewiesen und ihm sein richtiges Schwert gegeben werden. Sobald der HC den Tempel einmal verlassen hat und wieder zurückkehrt, kann Brage im Tempel des Helm in Nashkell aufgesucht werden, und er wird dem HC anbieten, ihn zu begleiten.<br />
 Die Quest um seine Unschuld zu beweisen kann vor dem ersten Betreten der Minen von Nashkell erledigt werden. Siehe hierzu die Tipps in der Sektion Walkthrough/Spoilers.<br />
 <br />
@@ -105,7 +105,7 @@ Der BG1-Teil enth&auml;lt einen Freundschaftspfad mit 11 Dialogen, in denen Brag
 Um mit Eldoth und Viconia alle Banter zu erhalten, sollten die meisten verfluchten Gegenst&auml;nde, die im Spiel gefunden werden k&ouml;nnen, identifiziert und ins Inventar gelegt werden.<br />
 Nach 2/3 der Freundschaftsdialoge bittet Brage darum, nach Nashkell zur&uuml;ckzukehren um das Grab seiner Familie zu  besuchen. Der HC muss nicht bei dem eigentlichen Gang zum Friedhof dabei sein um diesen Quest sinnvoll abzuschlie&szlig;en, in diesem Fall wird aber etwas mehr Inhalt zu sehen sein (&uuml;ber den Barge sonst berichtet, wenn man ihn wiedertrifft).<br /><br />
 <strong>SoD:</strong><br /><br />
-In der Version Beta 1 gibt es keinen nennenswerten SoD-Inhalt. Brage bleibt wie ein Multiplayer-NSC einfach in der Gruppe und l&auml;uft mit, bis er aus der Gruppe entlassen wird.<br /><br />
+Ab Version 5 gibt es minimalen SoD-Inhalt. Brage kommentiert die wichtigsten Spielgeschehen wie alle anderen NPCs auch und kann normal aus der Gruppe entfernt und wieder aufgenommen werden.<br /><br />
 <strong>BGII:</strong><br /><br />
 In der Version Beta 1 existiert kein offizieller BGII-Inhalt. Die bereits bestehenden Inhalte wurden noch nicht ins Deutsche &uuml;bersetzt:<br />
 Brage ist im Tempel des Helm im Tempelbezirk zu finden, nachdem der Quest um das Blicklose Auge von einem der drei Tempel akzeptiert wurde. Er kann nun in die Gruppe aufgenommen werden.<br />
@@ -124,7 +124,8 @@ Seine Eigenschaften wurden der originalen Spielcharater-Datei entnommen:
 		<li>WIS: 8</li>
 		<li>CHA: 13</li>
       </ul> <br />
-In der deutschen Version wurde f&uuml;r Brage das Soundset "HoW_Male_2" aus IWD:TotLM verwendet.<br /><br />
+In der deutschen sowie englischen Version wurden f&uuml;r Brage die entsprechenden Sprachversionen des Soundsets "HoW_Male_2" aus IWD:TotLM verwendet.<br />
+In der deutschen Version verwendet Brage das Soundset "HoW_Male_2" aus IWD:TotLM.<br /><br />
 Brages Portrait wurde von Acifer angefertigt und dankenswerterweise zur Verf&uuml;gung gestellt.<br /><br />
     <img src="readme/brage.png">
 <h2> <a name="spoiler" id="spoiler">Walkthrough / Spoilers</a></h2>	
@@ -156,7 +157,7 @@ Hinweis: Falls man Borda bei der Originalbegegnung beim Xvartdorf nicht get&ouml
 <strong>Acifer:</strong> Portrait, Promotion-Bild, Ideen, D&D-Wissen. Danke f&uuml;r die tollen Bilder, durch sie hat das Arbeiten an dieser Mod noch mehr Spa&szlig; gemacht!</br>
 <strong>Lumorus:</strong> Danke f&uuml;r die Idee, aus Brage einen NSC zu machen und den Hinweis, dass er ja aus Amn kommt und man ihn daher ohne Verrenkungen in BGII in Atkatla wiedertreffen kann. Ohne h&auml;tte ich an dieser Mod nicht gearbeitet!</br> 
 </br>
-Italienische Übersetzung von <strong>Coland</strong>.</br>
+Italienische Übersetzung von <strong>Coland</strong>, korrekturgelesen von <strong>Colmar</strong>. Vielen Dank!</br>
 </br>
 Danke an BioWare, Black Isle und Wizards of the Coast f&uuml;r Baldur's Gate 1, 2 und die Infinity Engine, und BeamDog f&uuml;r das Neuauflegen der Spiele.</br>
 Danke ans Kerzenburgforum f&uuml;r das Hosten der Mod und das Bereitstellen von Austauschm&ouml;glichkeiten mit anderen Moddern und Spielern.</br>
@@ -173,7 +174,7 @@ This mod is also not developed, supported, or endorsed by BioWare, Black Isle St
 <h1><a name="version" id="version">Versionshistorie</a></h1>
 <div class="section">
 Version 5:</br>
-- Italian version by Coland.<br />
+- Italian version by Coland, proofread by Colmar.<br />
 - Revised kickout dialogue.<br />
 - Patching of "Brage's Sword" quest from bgqe on EET should work always.</br>
 - Added basic SoD content.</br>
