updates and fixes for v6
- Corrected Brage's kickout dialgue in BGII (BGT).
- Added check to forbit install after EET_End.
- Added Brage to bddialog and bdbanter for EET.
- Corrected Brage's assigned banter dlg for SoD.
- Corrected Imoen DV in bdbanter for SoD.
- Corrected Brage's appearance in bd0121.
- Comment upon entering Avernus is now added to end of bd4400.bcs instead of top.
- Added crossmod scripts for Transitions Mod to Brage's SoD script, too, and fixed triggers for direct EET transition.
- Line in tp2 for bgqe "Nashkel Monster" now traified.
- New crossmod added: bg1re "Necromancer's Trouble", Balduran's Seatower, Northern Tales of the Sword Coast.
- More BG1 reacions (Bassilus, Jardak & Delrik in BG city).
- Reaction to cleared bandit camp revised.
- Brage will not complain about HC entering Manor Hause in Nashkel if it was opened by Megan from DCotSC.
- Corrected patching of Sendai from BG1 for BGT/Tutu/EET.
- Corrected install of kickout dialogue for BG:EE (without SoD).
- More SoD reactions.
- corrected cpmvars.tpa entries for "Beregost_House08_L2"
- Typo corrections.

--- a/c#brage/readme.brage.english.html
+++ b/c#brage/readme.brage.english.html
@@ -172,16 +172,36 @@ This mod is also not developed, supported, or endorsed by BioWare, Black Isle St
 
 <h1><a name="version" id="version">Version History</a></h1>
 <div class="section">
+Version 6:</br>
+- Corrected Brage's kickout dialgue in BGII (BGT).</br>
+- Added check to forbit install after EET_End.</br>
+- Added Brage to bddialog and bdbanter for EET.</br>
+- Corrected Brage's assigned banter dlg for SoD.</br>
+- Corrected Imoen DV in bdbanter for SoD.</br>
+- Corrected Brage's appearance in bd0121.</br>
+- Comment upon entering Avernus is now added to end of bd4400.bcs instead of top.</br>
+- Added crossmod scripts for Transitions Mod to Brage's SoD script, too, and fixed triggers for direct EET transition.</br>
+- Line in tp2 for bgqe "Nashkel Monster" now traified.</br>
+- New crossmod added: bg1re "Necromancer's Trouble", Balduran's Seatower, Northern Tales of the Sword Coast.</br>
+- More BG1 reacions (Bassilus, Jardak & Delrik in BG city).</br>
+- Reaction to cleared bandit camp revised.</br>
+- Brage will not complain about HC entering Manor Hause in Nashkel if it was opened by Megan from DCotSC.</br>
+- Corrected patching of Sendai from BG1 for BGT/Tutu/EET.</br>
+- Corrected install of kickout dialogue for BG:EE (without SoD).</br>
+- More SoD reactions.</br>
+- corrected cpmvars.tpa entries for "Beregost_House08_L2"</br>
+- Typo corrections.</br>
+<br />
 Version 5:</br>
-- Italian version by Coland, proofread by Colmar.<br />
-- Revised kickout dialogue.<br />
+- Italian version by Coland, proofread by Colmar.</br>
+- Revised kickout dialogue.</br>
 - Patching of "Brage's Sword" quest from bgqe on EET should work always.</br>
 - Added basic SoD content.</br>
 - Compatibility with Transitions Mod added.</br>
 <br />
 Version 4:</br>
-- Brage's Sword Quest: Oublek should take Borda's Letter if shown as evidence.<br />
-- Brage should have kickout dialogue in BGII.<br />
+- Brage's Sword Quest: Oublek should take Borda's Letter if shown as evidence.</br>
+- Brage should have kickout dialogue in BGII.</br>
 <br />
 Version 3:</br>
 - English version proof read by Athies.<br />
