--- a/c#brage/readme.brage.german.html
+++ b/c#brage/readme.brage.german.html
@@ -103,7 +103,7 @@ Es existieren b&ouml;se Questl&ouml;sungen, die zu einer Verurteilung Brages zum
 Nachdem Brages Unschuld bewiesen wurde, er sein echtes Schwert akzeptiert hat und der HC einmal aus dem Tempel getreten ist - als symbolische Zeit, die Brage braucht, um seine Gedanken zu ordnen - wird Brage den HC bitten, sich ihm/ihr anschlie&szlig;en zu d&uuml;rfen. Brage m&ouml;chte dem/der HC einerseits eine Gegenleistung f&uuml;r die Hilfe geben, andererseits aber auch selbst daran mitarbeiten, die Hinterm&auml;nner der Intrige gegen ihn zu stellen. Sein Gesuch muss nicht sofort akzeptiert werden, sondern er kann auch sp&auml;ter noch im Tempel rekrutiert werden.<br />
 Der BG1-Teil enth&auml;lt einen Freundschaftspfad mit 11 Dialogen, in denen Brage vornehmlich versucht, seine Schuldgef&uuml;hle und seine Trauer zu verarbeiten. Die Dialoge sind am besten f&uuml;r HCs geeignet, die ihm zuh&ouml;ren und ihn unterst&uuml;tzen wollen. Brage hat ebenfalls Dialoge, sog. Banter, mit manchen BioWare NSCs. In Version Beta 1 unterh&auml;lt sich Brage mit den folgenden NSCs: Ajantis, Eldoth, Garrick, Imoen, Minsc & Dynaheir, Montaron, Viconia, Xzar, Yeslick. Es gibt weitere Dialoge, in denen auch die NSCs Edwin, Jaheira und Khalid etwas sagen, wenn sie zu diesem Zeitpunkt in der Gruppe sind. Brage reagiert auf die wichtigen Spiel-Meilensteine, hat aber sonst bisher keine direkten Einmischdialoge. Er ist in Nashkell bekannt und provoziert dort Reaktionen der Bewohner. Brage hat einen kleinen "Klickdialog" (PID) der im Laufe des Spiels keine weiteren Frageoptionen erh&auml;lt.<br />
 Um mit Eldoth und Viconia alle Banter zu erhalten, sollten die meisten verfluchten Gegenst&auml;nde, die im Spiel gefunden werden k&ouml;nnen, identifiziert und ins Inventar gelegt werden.<br />
-Nach 2/3 der Freundschaftsdialoge bittet Brage darum, nach Nashkell zur&uuml;ckzukehren um das Grab seiner Familie zu  besuchen. Der HC muss nicht bei dem eigentlichen Gang zum Friedhof dabei sein um diesen Quest sinnvoll abzuschlie&szlig;en, in diesem Fall wird aber etwas mehr Inhalt zu sehen sein (&uuml;ber den Barge sonst berichtet, wenn man ihn wiedertrifft).<br /><br />
+Nach 2/3 der Freundschaftsdialoge bittet Brage darum, nach Nashkell zur&uuml;ckzukehren um das Grab seiner Familie zu  besuchen. Der HC muss nicht bei dem eigentlichen Gang zum Friedhof dabei sein um diesen Quest sinnvoll abzuschlie&szlig;en, in diesem Fall wird aber etwas mehr Inhalt zu sehen sein (&uuml;ber den Brage sonst berichtet, wenn man ihn wiedertrifft).<br /><br />
 <strong>SoD:</strong><br /><br />
 Ab Version 5 gibt es minimalen SoD-Inhalt. Brage kommentiert die wichtigsten Spielgeschehen wie alle anderen NPCs auch und kann normal aus der Gruppe entfernt und wieder aufgenommen werden.<br /><br />
 <strong>BGII:</strong><br /><br />
@@ -173,6 +173,26 @@ This mod is also not developed, supported, or endorsed by BioWare, Black Isle St
 
 <h1><a name="version" id="version">Versionshistorie</a></h1>
 <div class="section">
+Version 6:</br>
+- Corrected Brage's kickout dialgue in BGII (BGT).</br>
+- Added check to forbit install after EET_End.</br>
+- Added Brage to bddialog and bdbanter for EET.</br>
+- Corrected Brage's assigned banter dlg for SoD.</br>
+- Corrected Imoen DV in bdbanter for SoD.</br>
+- Corrected Brage's appearance in bd0121.</br>
+- Comment upon entering Avernus is now added to end of bd4400.bcs instead of top.</br>
+- Added crossmod scripts for Transitions Mod to Brage's SoD script, too, and fixed triggers for direct EET transition.</br>
+- Line in tp2 for bgqe "Nashkel Monster" now traified.</br>
+- New crossmod added: bg1re "Necromancer's Trouble", Balduran's Seatower, Northern Tales of the Sword Coast.</br>
+- More BG1 reacions (Bassilus, Jardak & Delrik in BG city).</br>
+- Reaction to cleared bandit camp revised.</br>
+- Brage will not complain about HC entering Manor Hause in Nashkel if it was opened by Megan from DCotSC.</br>
+- Corrected patching of Sendai from BG1 for BGT/Tutu/EET.</br>
+- Corrected install of kickout dialogue for BG:EE (without SoD).</br>
+- More SoD reactions.</br>
+- corrected cpmvars.tpa entries for "Beregost_House08_L2"</br>
+- Typo corrections.</br>
+<br />
 Version 5:</br>
 - Italian version by Coland, proofread by Colmar.<br />
 - Revised kickout dialogue.<br />
@@ -217,7 +237,7 @@ Version Beta 3:</br>
 <br />
 Version Beta 2:</br>
 - Der Soldat Hick in der Kaserne ist nicht mehr da, nachmdem man Brage zurückgebracht hat.<br />
-- Wenn Brage zum Tempel gebracht wurde, gibt Nalin einen Hinweis, dass der HC mit Oublek sprechen sollte, um mit Barges Quest weiterzukommen.<br />
+- Wenn Brage zum Tempel gebracht wurde, gibt Nalin einen Hinweis, dass der HC mit Oublek sprechen sollte, um mit Brages Quest weiterzukommen.<br />
 - Wenn Brage zu Oublek gebracht wurde, spricht dieser nun selbst weiter und vergibt den Quest.<br />
 - Nachdem Brage sein richtiges Schwert akzeptiert hat, läuft nun kein Timer mehr, sondern der HC muss den Tempel einmal verlassen. Nach dem erneuten Betreten bittet Brage wie vorher darum, in die Gruppe aufgenommen zu werden.<br /><br />
 Version Beta 1:</br>
