--- a/c#brage/readme.brage.german.html
+++ b/c#brage/readme.brage.german.html
@@ -173,6 +173,11 @@ This mod is also not developed, supported, or endorsed by BioWare, Black Isle St
 
 <h1><a name="version" id="version">Versionshistorie</a></h1>
 <div class="section">
+Version 6.1:</br>
+- Italian translation finished by Coland.</br>
+- German translation finished.</br>
+- Corrected install error of crossmod with BST.</br>
+</br>
 Version 6:</br>
 - Corrected Brage's kickout dialgue in BGII (BGT).</br>
 - Added check to forbit install after EET_End.</br>
