restructuring, fixes, more content
-corrected file formatting for some Italian tras
-restructured mod installation (check file for "do only once" actions)
-more BG1 content
-lines from tp2 trified

--- a/c#brage/readme.brage.german.html
+++ b/c#brage/readme.brage.german.html
@@ -179,7 +179,7 @@ Version 6.1:</br>
 - Corrected install error of crossmod with BST.</br>
 </br>
 Version 6:</br>
-- Corrected Brage's kickout dialgue in BGII (BGT).</br>
+- Corrected Brage's kickout dialgue in BG1 (BGT).</br>
 - Added check to forbit install after EET_End.</br>
 - Added Brage to bddialog and bdbanter for EET.</br>
 - Corrected Brage's assigned banter dlg for SoD.</br>
@@ -191,7 +191,7 @@ Version 6:</br>
 - New crossmod added: bg1re "Necromancer's Trouble", Balduran's Seatower, Northern Tales of the Sword Coast.</br>
 - More BG1 reacions (Bassilus, Jardak & Delrik in BG city).</br>
 - Reaction to cleared bandit camp revised.</br>
-- Brage will not complain about HC entering Manor Hause in Nashkel if it was opened by Megan from DCotSC.</br>
+- Brage will not complain about HC entering Manor Hause in Nashkel if it was opened by Megan from DSotSC.</br>
 - Corrected patching of Sendai from BG1 for BGT/Tutu/EET.</br>
 - Corrected install of kickout dialogue for BG:EE (without SoD).</br>
 - More SoD reactions.</br>
