--- a/c#brage/readme.brage.english.html
+++ b/c#brage/readme.brage.english.html
@@ -172,6 +172,14 @@ This mod is also not developed, supported, or endorsed by BioWare, Black Isle St
 
 <h1><a name="version" id="version">Version History</a></h1>
 <div class="section">
+Version 6.2:</br>
+- Corrected text formatting upon installation on EE (mod should not stop EE game from launching) introduced in 6.1 for German+Italian versions.</br>
+- Corrected general file formatting for some Italian tras.</br>
+- Restructured mod installation (check file for "do only once" actions).</br>
+- One more interjection for BG1.</br>
+- more BG1 content.</br>
+- All lines from tp2 trified.</br>
+</br>
 Version 6.1:</br>
 - Italian translation finished by Coland.</br>
 - German translation finished.</br>
