--- a/c#brage/readme.brage.german.html
+++ b/c#brage/readme.brage.german.html
@@ -173,6 +173,10 @@ This mod is also not developed, supported, or endorsed by BioWare, Black Isle St
 
 <h1><a name="version" id="version">Versionshistorie</a></h1>
 <div class="section">
+Version 6.2:</br>
+- Corrected text formatting upon installation on EE (mod should not stop EE game from launching) introduced in 6.1 for German+Italian versions.</br>
+- Corrected general file formatting for some Italian tras.</br>
+- Restructured mod installation (check file for "do only once" actions).</br>
 Version 6.1:</br>
 - Italian translation finished by Coland.</br>
 - German translation finished.</br>
