--- a/c#brage/readme.brage.english.html
+++ b/c#brage/readme.brage.english.html
@@ -158,7 +158,7 @@ Note: For the case that the merchant Borda was not killed upon the first meeting
 </br>
 Italian Translation by <strong>Coland</strong>, proofread by <strong>Colmar</strong>. Thank you!</br>
 </br>
-Thanks to BioWare, Black Isle and Wizards of the Coast for Baldur's Gate 1, 2 and the Infinity Engine, and BeamDog for the revival of the games.</br>
+Thanks to BioWare, Black Isle and Wizards of the Coast for Baldur's Gate 1, 2 and the Infinity Engine, and BeamDog for the revival of the games including the SoD campaign.</br>
 Thanks to Kerzenburgforum for hosting the mod and giving a place for exchange of ideas.</br>
 Thanks to all modders who developed and are maintaining the IE modding tools, without which this mod would not have been possible.</br>
 Thanks to all who play this mod or any of my mods, and also those of you who give feedback to help improving my mods. Modding would not be as much fun without you.</br>
@@ -172,6 +172,13 @@ This mod is also not developed, supported, or endorsed by BioWare, Black Isle St
 
 <h1><a name="version" id="version">Version History</a></h1>
 <div class="section">
+Version 7:</br>
+- Added farewell interjection before transition to main SoD campaign.</br>
+- Minor internal restructuring, optimized detection of campaigns and how Korlasz' Dungeon is treated.</br>
+- Improved Crossmod for EndlessBG1 mod: Brage should say his Farewell lines in BG1.</br>
+- Corrected Crossmod for Transitions mod: Brage should not say his SoD-Farewell lines in BG1.</br>
+- Typo corrections (German).</br>
+</br>
 Version 6.2:</br>
 - Corrected text formatting upon installation on EE (mod should not stop EE game from launching) introduced in 6.1 for German+Italian versions.</br>
 - Corrected general file formatting for some Italian tras.</br>
