--- a/c#brage/readme.brage.german.html
+++ b/c#brage/readme.brage.german.html
@@ -173,6 +173,13 @@ This mod is also not developed, supported, or endorsed by BioWare, Black Isle St
 
 <h1><a name="version" id="version">Versionshistorie</a></h1>
 <div class="section">
+Version 7:</br>
+- Added farewell interjection before transition to main SoD campaign.</br>
+- Minor internal restructuring, optimized detection of campaigns and how Korlasz' Dungeon is treated.</br>
+- Improved Crossmod for EndlessBG1 mod: Brage should say his Farewell lines in BG1.</br>
+- Corrected Crossmod for Transitions mod: Brage should not say his SoD-Farewell lines in BG1.</br>
+- Typo corrections (German).</br>
+</br>
 Version 6.2:</br>
 - Corrected text formatting upon installation on EE (mod should not stop EE game from launching) introduced in 6.1 for German+Italian versions.</br>
 - Corrected general file formatting for some Italian tras.</br>
