--- a/c#brage/readme.brage.english.html
+++ b/c#brage/readme.brage.english.html
@@ -177,6 +177,7 @@ Version 7:</br>
 - Minor internal restructuring, optimized detection of campaigns and how Korlasz' Dungeon is treated.</br>
 - Improved Crossmod for EndlessBG1 mod: Brage should say his Farewell lines in BG1.</br>
 - Corrected Crossmod for Transitions mod: Brage should not say his SoD-Farewell lines in BG1.</br>
+- Improved Compatibility with EndlessBG1 and Transitions mod: Korlasz' Dungeon is treated as being in BG1 scripting wise.</br>
 - Typo corrections (German).</br>
 </br>
 Version 6.2:</br>
