- Mod should install on bg2ee and BGII games without error.

--- a/c#brage/readme.brage.english.html
+++ b/c#brage/readme.brage.english.html
@@ -178,6 +178,7 @@ Version 7:</br>
 - Improved Crossmod for EndlessBG1 mod: Brage should say his Farewell lines in BG1.</br>
 - Corrected Crossmod for Transitions mod: Brage should not say his SoD-Farewell lines in BG1.</br>
 - Improved Compatibility with EndlessBG1 and Transitions mod: Korlasz' Dungeon is treated as being in BG1 scripting wise.</br>
+- Mod should install on bg2ee and BGII games without error.</br>
 - Typo corrections (German).</br>
 </br>
 Version 6.2:</br>
