--- a/c#brage/readme.brage.german.html
+++ b/c#brage/readme.brage.german.html
@@ -181,6 +181,8 @@ Version 7:</br>
 - Improved Compatibility with EndlessBG1 and Transitions mod: Korlasz' Dungeon is treated as being in BG1 scripting wise.</br>
 - Mod should install on bg2ee and BGII games without error.</br>
 - Typo corrections (German).</br>
+- Crossmod was splitted into own component.</br>
+- Added globally unique LABELs to support Project Infinity.</br>
 </br>
 Version 6.2:</br>
 - Corrected text formatting upon installation on EE (mod should not stop EE game from launching) introduced in 6.1 for German+Italian versions.</br>
