--- a/c#brage/readme.brage.german.html
+++ b/c#brage/readme.brage.german.html
@@ -173,6 +173,9 @@ This mod is also not developed, supported, or endorsed by BioWare, Black Isle St
 
 <h1><a name="version" id="version">Versionshistorie</a></h1>
 <div class="section">
+Version 7.1:</br>
+- Adjusted check for EndlessBG1 so it doesn't try to install crossmod for Transitions mod.</br>
+</br>
 Version 7:</br>
 - Added farewell interjection before transition to main SoD campaign.</br>
 - Minor internal restructuring, optimized detection of campaigns and how Korlasz' Dungeon is treated.</br>
