--- a/c#brage/readme.brage.english.html
+++ b/c#brage/readme.brage.english.html
@@ -172,6 +172,11 @@ This mod is also not developed, supported, or endorsed by BioWare, Black Isle St
 
 <h1><a name="version" id="version">Version History</a></h1>
 <div class="section">
+Version 7.2:</br>
+- Larissa should not spawn twice. ("Brage's Sword" quest.).</br>
+- SoD: interjection into BDHESTER 5 changed to I_C_T.</br>
+- Fixed install error if EndlessBG1 is not installed.</br>
+</br>
 Version 7.1:</br>
 - Adjusted check for EndlessBG1 so it doesn't try to install crossmod for Transitions mod.</br>
 </br>
