added info about centent depenency on RtD

--- a/c#brage/readme.brage.german.html
+++ b/c#brage/readme.brage.german.html
@@ -90,6 +90,7 @@ Lasst WeInstall c#brage in Euren Spielordner laufen, um die Modifikation zu inst
 <h1><a name="compat" id="compat">Kompatiblit&auml;t mit anderen Mods</a></h1>
 <div class="section">
 Brage's Redemption wurde mit WeiDU und mit dem Anspruch gr&ouml;&szlig;tm&ouml;glicher Kompatibilit&auml;t mit anderen Mods erstellt. Die Mod sollte jedoch vor dem BG1NPC Projekt installiert werden, damit die M&ouml;glichkeit, Brage auch Oublek auszuliefern, nicht &uuml;berschrieben wird. Dies kann auch erreicht werden, indem die Komponente "Brages Schwert" der <a href="https://www.baldurs-gate.de/index.php?resources/jasteys-baldurs-gate-mini-quests-and-begegnungen-modifikation.17/">Baldur's Gate Mini Quests and Encounters Mod (bgqe)</a> vor dem BG1NPC Project installiert wird. Wird der Quest durch bgqe installiert, wird er von der Mod Brage's Redemption entsprechend erkannt.<br />
+Bitte beachten: damit Brage in SoD entsprechend auf die Spielereignisse reagiert, muss die Hauptkomponente (2. Komponente, das "Trackingsystem") der Mod "Road to Discovery" installiert sein.<br />
 </div>
 
 <h1><a name="content" id="content">Modinhalte</a></h1>
@@ -104,6 +105,7 @@ Als zweite, optionale Komponente gibt es die Möglichkeit, dem originalen Brage i
 Durch die Mod kann man die Hintergr&uuml;nde um Brages verfluchten Zweihänder erkunden und nachweisen, dass Brage Opfer einer Intrige geworden ist und ihn so vor dem Galgen retten - wenn man das m&ouml;chte.<br />
 Voraussetzung ist, dass man Brage lebend nach Nashkell bringt. Hierzu f&uuml;gt die Mod die M&ouml;glichkeit ein, ihn auch an Oublek auszuliefern, wie es im Originalspiel urspr&uuml;nglich vorgesehen aber nicht spielbar war. (Hierzu die obige Warnung bzgl. der Installationsreihenfolge beachten.)<br />
 Es existieren b&ouml;se Questl&ouml;sungen, die zu einer Verurteilung Brages zum M&ouml;rder enden, f&uuml;r welche Brage danach nicht mehr im Spiel als aufnehmbarer NPC zur Verf&uuml;gung steht.<br />
+Bitte beachten: damit Brage in SoD entsprechend auf die Spielereignisse reagiert, muss die Hauptkomponente (2. Komponente, das "Trackingsystem") der Mod "Road to Discovery" installiert sein.<br />
 <h2> <a name="npc" id="npc">Brage als aufnehmbarer NSC</a></h2>
 <strong>BG1:</strong><br /><br />
 Nachdem Brages Unschuld bewiesen wurde, er sein echtes Schwert akzeptiert hat und der HC einmal aus dem Tempel getreten ist - als symbolische Zeit, die Brage braucht, um seine Gedanken zu ordnen - wird Brage den HC bitten, sich ihm/ihr anschlie&szlig;en zu d&uuml;rfen. Brage m&ouml;chte dem/der HC einerseits eine Gegenleistung f&uuml;r die Hilfe geben, andererseits aber auch selbst daran mitarbeiten, die Hinterm&auml;nner der Intrige gegen ihn zu stellen. Sein Gesuch muss nicht sofort akzeptiert werden, sondern er kann auch sp&auml;ter noch im Tempel rekrutiert werden.<br />
