--- a/c#brage/readme.brage.german.html
+++ b/c#brage/readme.brage.german.html
@@ -204,6 +204,10 @@ This mod is also not developed, supported, or endorsed by BioWare, Black Isle St
 
 <h1><a name="version" id="version">Versionshistorie</a></h1>
 <div class="section">
+Version 8.1:</br>
+- Corrected wrong text format for German version.</br>
+- Fixed install error for crossmod with bg1ub (BGT).</br>
+</br>
 Version 8.0:</br>
 - SoD content completed.</br>
 - More content for BG1 (reactions to Albert and Roofie, quest path with sword inquiries, more dialogues, more crossmod).</br>
