--- a/c#brage/readme.brage.english.html
+++ b/c#brage/readme.brage.english.html
@@ -205,6 +205,10 @@ This mod is also not developed, supported, or endorsed by BioWare, Black Isle St
 
 <h1><a name="version" id="version">Version History</a></h1>
 <div class="section">
+Version 8.2:</br>
+- Brage's comment on being arrested should fire and not loop.</br>
+- Ramazith should notice if Abela is lost and not be available for Brage's sword questions.</br>
+</br>
 Version 8.1:</br>
 - Corrected wrong text format for German version.</br>
 - Fixed install error for crossmod with bg1ub (BGT).</br>
