Refined triggers for BG1 banters with Ajantis.

--- a/c#brage/readme.brage.english.html
+++ b/c#brage/readme.brage.english.html
@@ -208,6 +208,7 @@ This mod is also not developed, supported, or endorsed by BioWare, Black Isle St
 Version 8.2:</br>
 - Brage's comment on being arrested should fire and not loop.</br>
 - Ramazith should notice if Abela is lost and not be available for Brage's sword questions.</br>
+- Refined triggers for BG1 banters with Ajantis.</br>
 - Crossmod with Ascalon's Questpack "Serpents of Abbathor": Emerson should not mention CHARNAME's group twice if he notices Brage, Brage's comment should not loop.</br>
 </br>
 Version 8.1:</br>
