fixed comment on being arrested

--- a/c#brage/readme.brage.german.html
+++ b/c#brage/readme.brage.german.html
@@ -204,6 +204,9 @@ This mod is also not developed, supported, or endorsed by BioWare, Black Isle St
 
 <h1><a name="version" id="version">Versionshistorie</a></h1>
 <div class="section">
+Version 8.3:</br>
+- Brage's comment on being arrested should fire not too early.</br>
+</br>
 Version 8.2:</br>
 - Brage's comment on being arrested should fire and not loop.</br>
 - Ramazith should notice if Abela is lost and not be available for Brage's sword questions.</br>
